<resources>
    <string name="app_name">GDShoppingMall</string>
    <string name="app_title">广电甄品</string>
    <string name="back">返回</string>
    <string name="shopping_car">购物车</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="search">在此搜索您感兴趣的东西</string>
    <string name="mobile_code">请输入手机号码</string>
    <string name="app_update">更新</string>
    <string name="register_phone">请输入手机号</string>
    <string name="verification_code">验证码</string>
    <string name="gt_verification_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="achieve">完成</string>
    <string name="forget_password">忘记密码</string>
    <string name="to_register">没有帐户，前往注册</string>
    <string name="reset_password">重置密码</string>
    <string name="again_password">再次输入密码</string>
    <string name="total">共计</string>
    <string name="piec">件</string>
    <string name="totalprice">总价:</string>
    <string name="home_sales_inform">甄选快报</string>
    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="my">我的</string>
    <string name="brand">品牌街</string>
    <string name="refre_brand">为您推荐的品牌</string>
    <string name="brand_collent">品牌汇总</string>
    <string name="merchant">甄选商家</string>
    <string name="guang">去逛逛</string>
    <string name="means">万</string>
    <string name="wares">商品</string>
    <string name="detial">详情</string>
    <string name="evaluate">评价</string>
    <string name="type">类型</string>
    <string name="quality">正品保证 极速退款 赠送运费 七天退换</string>
    <string name="count">数量</string>
    <string name="shoppevalute">商品评价</string>
    <string name="pull_down">继续下拉查看详情</string>
    <string name="add_shopp">加入购物车</string>
    <string name="paybut">购买</string>
    <string name="serach_all_evalute">查看所有评价</string>
    <string name="gopay">去支付</string>
    <string name="address">地址</string>
    <string name="shoppingmoney">商品金额</string>
    <string name="commitorder">提交订单</string>
    <string name="payment">实付款:</string>
    <string name="needpay">需支付:</string>
    <string name="select_payment">请选择支付方式</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipa_pay">支付宝支付</string>
    <string name="pay">立即支付</string>
    <string name="obligation">待付款</string>
    <string name="consignment">待发货</string>
    <string name="receiving">待收货</string>
    <string name="refund">退款/退货</string>
    <string name="finish_all">已完成</string>
    <string name="all_orders">全部订单</string>
    <string name="my_collent">我的收藏</string>
    <string name="my_evlaute">我的评价</string>
    <string name="my_integral">我的积分</string>
    <string name="my_message">我的消息</string>
    <string name="my_setting">个人设置</string>
    <string name="reation_service">联系客服</string>
    <string name="verion_code">版本号：</string>
    <string name="use_intrgral">如何使用积分</string>
    <string name="use_intrgral_detial">积分使用明细</string>
    <string name="add_address">添加地址</string>
    <string name="edit">编辑</string>
    <string name="del">删除</string>
    <string name="defaultaddress">默认地址</string>
    <string name="setaddress">设为默认</string>
    <string name="name">姓名</string>
    <string name="commit">提交</string>
    <string name="stay_ealuate">待评价</string>
    <string name="then_ealuate">已评价</string>
</resources>
