<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_top_fill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp60"
        android:layout_marginRight="@dimen/dp60"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:background="@drawable/register_et_bg"
            android:hint="@string/username"
            android:textSize="@dimen/sp14" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/register_et_bg"
            android:hint="@string/password"
            android:textSize="@dimen/sp14" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/register_et_bg"
            android:hint="@string/affirm_password"
            android:textSize="@dimen/sp14" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginTop="@dimen/dp20"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/achieve"
            android:textSize="@dimen/sp14" />
    </LinearLayout>


</LinearLayout>

