<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <include layout="@layout/title_top_fill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp60"
        android:layout_marginRight="@dimen/dp60"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/register_et_bg"
            android:hint="@string/username"
            android:id="@+id/activity_login_username"
            android:textSize="@dimen/sp14" />


        <EditText
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp20"
            android:password="true"
            android:background="@drawable/register_et_bg"
            android:hint="@string/password"
            android:textSize="@dimen/sp14" />

        <Button
            android:id="@+id/activity_login_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginTop="@dimen/dp20"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="登录"
            android:textSize="@dimen/sp14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/at_login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="@dimen/sp12" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/at_login_go_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_register"
                android:textColor="@color/white"
                android:textSize="@dimen/sp12" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>