<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <shopping.gd.com.yw.gdshoppingmail.view.ScrollInterceptScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dp45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/view_black"
            android:orientation="vertical">

            <include layout="@layout/fm_shopping_titlebar" />

            <include layout="@layout/separet_view" />

            <include layout="@layout/fm_shpooing_recycle" />
        </LinearLayout>
    </shopping.gd.com.yw.gdshoppingmail.view.ScrollInterceptScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="@dimen/sp14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/sp14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piec"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalprice"
                android:textSize="@dimen/sp14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp05"
                android:text="1231"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fm_shopping_go_pay"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/addshopp_bg"
                android:text="@string/gopay"
                android:textSize="@dimen/sp14" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>